@@ -1,3 +1,14 @@
+2006-10-31 Don Scorgie <DonScorgie@Blueyonder.co.uk>
+
+	(Still pretty borken)
+	* src/BaseThought.py:
+	* src/MMapArea.py:
+	* src/TextThought.py:
+	Draw text thoughts.  Add text.  No selection / moving / fancy yet.
+	But at least adding text once again works
+
+
+
 2006-10-24 Don Scorgie <DonScorgie@Blueyonder.co.uk>
 
 	(Still Broken.  Doesn't die when clicking on the map in edit mode)
